TFP-4975 historikk for avklart dødsdato (#5946)